# GraphEnglish

./: Cargo.toml
graphdata/: prototype_1.gephi
python_api/: api.py  csv_creator.py  dot_file_fix.py  graph_visualizer.py  nodes.csv  parts_of_speech.json
src/: main.rs
