[package]
name = "graphenglish"
version = "0.1.0"
edition = "2021"

[dependencies]
graphene = "0.1.5"
graphviz-rust = "0.9.1"
petgraph = "0.6.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
